<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Translation App</string>
    <string name="title">Translation</string>
    <string name="text">Text</string>
    <string name="camera">Camera</string>
    <string name="voice">Voice</string>
    <string name="scan">Scan</string>
    <string name="text_detail">Type your text for translating</string>
    <string name="camera_detail">Take picture and select your text</string>
    <string name="voice_detail">Speak and translate</string>
    <string name="scan_detail">Discover everything with camera</string>
    <string name="more_app">More Apps</string>
    <string name="hint">Type text or phrase...</string>
    <string name="scanning">Scanning text ...</string>
    <string name="speech_prompt">Say something…</string>
    <string name="feedback_app">Hi PPCLINK,</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="internet">Please enable 3G or Internet \nto use application</string>
    <string name="setting">Setting</string>
    <string name="upgrade_premium">upgrade to premium</string>
    <string name="upgrade">Remove Ads</string>
    <string name="ads">Ads Banner</string>
    <string name="feedback">Feedback</string>
    <string name="rate_app">Rate App</string>
    <string name="support">Support</string>
    <string name="share_app">Share App</string>
    <string name="restore">Restore Purchase</string>
    <string name="empty_item_voice" tools:ignore="StringEscaping">You haven\'t got any translation yet.\nTalk
        something and translate now</string>
    <string name="empty_item_text" tools:ignore="StringEscaping">You haven\'t got any translation yet.\nWrite
        something and translate now</string>
    <string name="empty_item_camera" tools:ignore="StringEscaping">You haven\'t got any translation yet.\nTake a photo
        and translate now</string>
    <string name="banner_ad_unit_id">ca-app-pub-4154334692952403/6776252978</string>
</resources>
