<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              tools:context="com.catviet.android.translation.screen.setting.SettingFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.catviet.android.translation.utils.customview.TextViewRegular
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_50"
            android:background="@android:color/white"
            android:textColor="@android:color/black"
            android:textSize="@dimen/ts_18"
            android:text="@string/setting"
            android:gravity="center"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/tela_8"/>
        <com.catviet.android.translation.utils.customview.TextViewRegular
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_50"
            android:textSize="@dimen/ts_14"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:text="@string/upgrade"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/dip_15"/>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_50"
            android:layout_marginLeft="@dimen/dip_15"
            android:layout_marginRight="@dimen/dip_15"
            app:cardCornerRadius="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:id="@+id/layout_upgrade">
                    <ImageView
                        android:layout_width="@dimen/dip_40"
                        android:layout_height="@dimen/dip_40"
                        android:src="@drawable/icon_upgrade"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/dip_10"/>
                    <com.catviet.android.translation.utils.customview.TextViewLight
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/upgrade"
                        android:layout_marginLeft="@dimen/dip_10"
                        android:gravity="center_vertical"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/ts_14"/>
                </LinearLayout>


            </LinearLayout>
        </android.support.v7.widget.CardView>
        <com.catviet.android.translation.utils.customview.TextViewRegular
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_50"
            android:textSize="@dimen/ts_14"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:text="@string/more_app"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/dip_15"/>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dip_15"
            android:layout_marginRight="@dimen/dip_15"
            app:cardCornerRadius="4dp">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rec_more_app"
                android:layout_marginLeft="@dimen/dip_10"
                android:layout_marginRight="@dimen/dip_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </android.support.v7.widget.CardView>
        <com.catviet.android.translation.utils.customview.TextViewRegular
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_50"
            android:textSize="@dimen/ts_14"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:text="@string/feedback"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/dip_15"/>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_152"
            android:layout_marginRight="@dimen/dip_15"
            android:layout_marginLeft="@dimen/dip_15">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:id="@+id/layout_rate"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="@dimen/dip_40"
                        android:layout_height="@dimen/dip_40"
                        android:src="@drawable/icon_rate"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/dip_10"/>
                    <com.catviet.android.translation.utils.customview.TextViewLight
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/rate_app"
                        android:layout_marginLeft="@dimen/dip_10"
                        android:gravity="center_vertical"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/ts_14"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.35dp"
                    android:background="@color/grey"
                    android:layout_marginLeft="@dimen/dip_10"
                    android:layout_marginRight="@dimen/dip_10"
                    android:alpha="0.4"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:id="@+id/layout_support">
                    <ImageView
                        android:layout_width="@dimen/dip_40"
                        android:layout_height="@dimen/dip_40"
                        android:src="@drawable/icon_support"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/dip_10"/>
                    <com.catviet.android.translation.utils.customview.TextViewLight
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/support"
                        android:layout_marginLeft="@dimen/dip_10"
                        android:gravity="center_vertical"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/ts_14"/>
                </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.35dp"
                android:background="@color/grey"
                android:layout_marginLeft="@dimen/dip_10"
                android:layout_marginRight="@dimen/dip_10"
                android:alpha="0.4"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:id="@+id/layout_share">
                <ImageView
                    android:layout_width="@dimen/dip_40"
                    android:layout_height="@dimen/dip_40"
                    android:src="@drawable/icon_share"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/dip_10"/>
                <com.catviet.android.translation.utils.customview.TextViewLight
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/share_app"
                    android:layout_marginLeft="@dimen/dip_10"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/ts_14"/>
            </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
